software/archived_software_docs/version-0.33/version-compatibility-reference.md
---
title: "Version compatibility reference for Astronomer Software"
sidebar_label: "Version compatibility reference"
id: version-compatibility-reference
description: A reference of all adjacent tooling required to run Astronomer Software and corresponding version compatibility.
---

Astronomer Software ships with and requires a number of adjacent technologies that support it, including Kubernetes, Helm, and Apache Airflow itself. This guide provides a reference of all required tools and versions for running Astronomer Software.

While the tables below reference the minimum compatible versions, we typically recommend running the latest versions of all tooling if and when possible.

:::tip

Find detailed information about the component image versions, including which versions were used to test a particular Astronomer Software version in the [Astronomer Software release index](https://updates.astronomer.io/astronomer-software/releases/index.html).

:::

## Astronomer Software

<!--- Version-specific -->

The following table shows version compatibility information for all currently supported versions of Astronomer Software and some legacy versions. Check [Astronomer Software lifecycle schedule](release-lifecycle-policy.md#software-lifecycle-schedule) for more information about supported versions of Astronomer Software.

| Astronomer Platform | Postgres | Python                                         | Astro Runtime        |
| ------------------- | -------- | ---------------------------------------------- | -------------------- |
| v0.32               | 13+     | 3.6 - 3.11 (_3.9-3.11 Require Airflow 2.2.0+_) | All Runtime versions |
| v0.33               | 13+     | 3.6 - 3.11 (_3.9-3.11 Require Airflow 2.2.0+_) | All Runtime versions |
| v0.34               | 13+     | 3.6 - 3.11 (_3.9-3.11 Require Airflow 2.2.0+_) | All Runtime versions |
| v0.35               | 13+     | 3.6 - 3.11 (_3.9-3.11 Require Airflow 2.2.0+_) | All Runtime versions |
| v0.36               | 13+     | 3.6 - 3.11 (_3.9-3.11 Require Airflow 2.2.0+_) | All Runtime versions |
| v0.37               | 13+      | 3.6 - 3.11 (_3.9-3.11 Require Airflow 2.2.0+_) | All Runtime versions |

See [Kubernetes version support table and policy](#kubernetes-version-support-table-and-policy) for Astronomer platform compatibility with Kubernetes.

Astronomer does not support Postgres versions that are beyond their end-of-life date. You can check to see the [currently supported versions of Postgres](https://www.postgresql.org/support/versioning/).

Astronomer recommends using the latest available version of the Astro CLI for all Software versions, in most cases. To upgrade from an earlier version of the CLI to the latest, see [Upgrade to Astro CLI version 1.0+](upgrade-astro-cli.md).

Astronomer recommends using the latest available version of the Astro CLI for all Software versions in most cases. To upgrade from an earlier version of the CLI to the latest, see [Upgrade to Astro CLI version 1.0+](upgrade-astro-cli.md).

For more detail about the changes in each Astronomer Software release, see the [Astronomer Software Release Notes](release-notes.md).

All currently supported Astronomer-distributed images are compatible with all versions of Astronomer Software. Astro Runtime maintenance is independent of Software maintenance. For more information, see [Astro Runtime maintenance and lifecycle policy](runtime-version-lifecycle-policy.mdx).

### Kubernetes version support table and policy

In general, Astronomer Software will support a given version of Kubernetes through its End of Life. This includes Kubernetes upstream and cloud-managed variants like GKE, AKS, and EKS. When a version of Kubernetes reaches End of Life, support will be removed in the next major or minor release of Astronomer Software. For more information on Kubernetes versioning and release policies, refer to [Kubernetes Release History](https://kubernetes.io/releases/) or your cloud provider.

See the following table for all supported Kubernetes versions in each maintained version of Astronomer Software.

| Astronomer platform | Kubernetes 1.22 | Kubernetes 1.23 | Kubernetes 1.24 | Kubernetes 1.25 | Kubernetes 1.26 | Kubernetes 1.27 | Kubernetes 1.28 | Kubernetes 1.29 | Kubernetes 1.30 |
| :-----------------: | :-------------: | :-------------: | :-------------: | :-------------: | :-------------: | :-------------: | :-------------: | :-------------: | :-------------: |
|   0.32.0 - 0.32.2   |       ✔️        |       ✔️        |       ✔️        |       ✔️        |       ✔️        |       ✔️        |                 |                 |                 |
|       0.32.3        |                 |       ✔️        |       ✔️        |       ✔️        |       ✔️        |       ✔️        |                 |                 |                 |
|       0.32.4        |                 |       ✔️        |       ✔️        |       ✔️        |       ✔️        |       ✔️        |       ✔️        |                 |                 |
|       0.32.5        |                 |                 |       ✔️        |       ✔️        |       ✔️        |       ✔️        |       ✔️        |                 |                 |
|       0.32.6        |                 |                 |       ✔️        |       ✔️        |       ✔️        |       ✔️        |       ✔️        |       ✔️        |                 |
|       0.33.0        |                 |                 |       ✔️        |       ✔️        |       ✔️        |       ✔️        |                 |                 |                 |
|       0.33.1        |                 |                 |       ✔️        |       ✔️        |       ✔️        |       ✔️        |       ✔️        |                 |                 |
|       0.33.2        |                 |                 |       ✔️        |       ✔️        |       ✔️        |       ✔️        |       ✔️        |                 |                 |
|       0.33.3        |                 |                 |       ✔️        |       ✔️        |       ✔️        |       ✔️        |       ✔️        |       ✔️        |                 |
|       0.34.0        |                 |                 |       ✔️        |       ✔️        |       ✔️        |       ✔️        |       ✔️        |                 |                 |
|   0.34.1 - 0.34.2   |                 |                 |                 |       ✔️        |       ✔️        |       ✔️        |       ✔️        |       ✔️        |                 |
|   0.35.0 - 0.35.1   |                 |                 |                 |       ✔️        |       ✔️        |       ✔️        |       ✔️        |       ✔️        |       ✔️        |
|   0.35.2 - 0.35.4   |                 |                 |                 |                 |                 |       ✔️        |       ✔️        |       ✔️        |       ✔️        |

For more information on upgrading Kubernetes versions, follow the guidelines offered by your cloud provider.

- [Amazon EKS](https://docs.aws.amazon.com/eks/latest/userguide/update-cluster.html)
- [Azure AKS](https://docs.microsoft.com/en-us/azure/aks/upgrade-cluster)
- [Google GKE](https://cloud.google.com/kubernetes-engine/docs/concepts/cluster-upgrades)
- [RedHat OpenShift](https://access.redhat.com/documentation/en-us/openshift_container_platform/4.11/html/updating_clusters/index)

## Airflow chart compatibility reference

Astronomer Software Deployments utilize the [Astronomer-distributed Helm chart for Apache Airflow](https://github.com/astronomer/airflow-chart). A Deployment's Airflow chart defines how a Deployment autoscales Pods and interacts with other components in your cluster.

Use the following table to see the Airflow Helm chart version for each supported version of Astronomer Software. To view the Airflow Helm chart for an unsupported version of Astronomer Software, open the default Astronomer Helm chart in the [`astronomer/astronomer` repository](https://github.com/astronomer/astronomer/blob/master/charts/astronomer/values.yaml) and select the **Tag** that corresponds to the unsupported version. The value of `airflowChartVersion` is the Airflow Helm chart version.

| Astronomer platform version | Astronomer Airflow Helm chart version |
| --------------------------- | ------------------------------------- |
| 0.32.0                      | 1.8.4                                 |
| 0.32.1                      | 1.8.7                                 |
| 0.31.2                      | 1.7.6                                 |
| 0.32.2                      | 1.8.7                                 |
| 0.32.3                      | 1.8.8                                 |
| 0.32.4                      | 1.8.8                                 |
| 0.32.5                      | 1.8.9                                 |
| 0.33.0                      | 1.9.2                                 |
| 0.33.1                      | 1.9.4                                 |
| 0.33.2                      | 1.9.5                                 |
| 0.33.3                      | 1.9.5                                 |
| 0.34.0                      | 1.10.0                                |
| 0.34.1                      | 1.10.0                                |
| 0.34.2                      | 1.10.2                                |
| 0.34.3                      | 1.10.2                                |
| 0.34.4                      | 1.10.4                                |
| 0.35.0                      | 1.11.0                                |
| 0.35.1                      | 1.11.0                                |
| 0.35.2                      | 1.11.0                                |
| 0.35.3                      | 1.11.4                                |
| 0.35.4                      | 1.11.4                                |

## Legacy version compatibility reference

The following table shows version compatibility information for all versions of Astronomer Software which are no longer supported:

| Astronomer Platform | Kubernetes                            | Postgres | Python                                         | Astro Runtime                                |
| ------------------- | ------------------------------------- | -------- | ---------------------------------------------- | -------------------------------------------- |
| v0.26               | 1.17, 1.18, 1.19, 1.20, 1.21          | 9.6+     | 3.6, 3.7, 3.8, 3.9 (_requires AC 2.2.0+_)      | All Astronomer Certified versions            |
| v0.27               | 1.18, 1.19, 1.20, 1.21                | 9.6+     | 3.6, 3.7, 3.8, 3.9 (_requires AC 2.2.0+_)      | All Astronomer Certified versions            |
| v0.28               | 1.19¹, 1.20¹, 1.21, 1.22, 1.23, 1.24  | 9.6+     | 3.6, 3.7, 3.8, 3.9 (_requires AC 2.2.0+_)      | All Astronomer Certified versions            |
| v0.29               | 1.19¹, 1.20¹, 1.21, 1.22, 1.23, 1.24  | 9.6+     | 3.6, 3.7, 3.8, 3.9 (_requires AC 2.2.0+_)      | All supported Certified and Runtime versions |
| v0.30               | 1.22¹, 1.23, 1.24, 1.25, 1.26, 1.27¹  | 11+      | 3.6 - 3.11 (_3.9-3.11 Require Airflow 2.2.0+_) | All Runtime versions                         |
| v0.31               | 1.21, 1.22, 1.23, 1.24 , 1.25¹, 1.26¹ | 11.19+   | 3.6, 3.7, 3.8, 3.9 (_requires Airflow 2.2.0+_) | All Runtime versions                         |

:::info

Due to the [deprecation of Dockershim](https://kubernetes.io/blog/2020/12/02/dockershim-faq/), Azure does not support private Certificate Authorities (CAs) starting with Kubernetes 1.19. If your organization is using a private CA, contact [Astronomer support](https://support.astronomer.io) before upgrading to Kubernetes 1.19 on Azure Kubernetes Service (AKS).

:::

:::info

¹ Support for some Kubernetes versions is limited to specific Astronomer Software patch versions.

- Support for Kubernetes 1.19 and 1.20 ends with Astronomer Software versions 0.28.7 and 0.29.5.
- Support for Kubernetes 1.22 ends with Astronomer Software version 0.30.7.
- Support for Kubernetes 1.25 and 1.26 starts in Astronomer Software 0.31.2.
- Support for Kubernetes 1.27 starts in Astronomer Software 0.30.8.

:::
